<resources>
    <string name="app_name">HW20</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_name">first name</string>
    <string name="last_name">last name</string>
    <string name="age">age</string>
    <string name="email">email</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="update">Update</string>
    <string name="success">Success</string>
    <string name="error">Error</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="save">SAVE</string>

</resources>