<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.fragments.users.UsersFragment">


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/wave" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="16dp"
        android:hint="@string/first_name"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="16dp"
        android:hint="@string/last_name"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/etFirstName"
        tools:layout_editor_absoluteX="-5dp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="16dp"
        android:hint="@string/age"
        android:inputType="number"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/etLastName" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="16dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/etAge"
        tools:layout_editor_absoluteX="24dp" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/save"
        android:textAllCaps="false"
        app:layout_constraintEnd_toStartOf="@+id/btnRemove"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmail" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnRemove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/remove"
        android:textAllCaps="false"
        app:layout_constraintEnd_toStartOf="@+id/btnUpdate"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnAdd"
        app:layout_constraintTop_toTopOf="@+id/btnAdd" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/update"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnRemove"
        app:layout_constraintTop_toTopOf="@+id/btnRemove" />


</androidx.constraintlayout.widget.ConstraintLayout>